prometheus/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
  #  nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  #  nginx.ingress.kubernetes.io/rewrite-target: /$2
  #  nginx.ingress.kubernetes.io/configuration-snippet: |
  #    rewrite ^/mongodbexpress/(.*)$ /$1 redirect;
spec:
  # tls:
  # - hosts:
  #   - myapp.com
  #     secretName: myapp-secret-tls
  ingressClassName: nginx
  rules:
    - host: oatas.veritas.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-k8s
                port: 
                  number: 9090
